tests/invalid/no_method.err_exp
no_method.m:035: In clause for type class method implementation:
no_method.m:035:   error: wrong number of arguments ([38;5;203m3[39;49m; should be [38;5;40m2[39;49m) in use of
no_method.m:035:   constructor `one_str'.
no_method.m:043: In clause for type class method implementation:
no_method.m:043:   type error in unification of variable `HeadVar__4'
no_method.m:043:   and functor `three_str'/3.
no_method.m:043:   [38;5;87mvariable `HeadVar__4'[39;49m has type
no_method.m:043:     [38;5;203mstring,[39;49m
no_method.m:043:   [38;5;87mfunctor `three_str'/3[39;49m has type
no_method.m:043:     [38;5;40mthree_str(string, string, string): func(int) = string.[39;49m
For more information, recompile with `-E'.
